projects/compiler/test/typechecker/traits/error_duplicate_declarations.abra
type Foo {  }
trait Foo {  }
enum Foo { Bar }
decorator Foo {  }